@@ -1,3 +1,8 @@
+2019-02-11  Kevin Ushey  <kevinushey@gmail.com>
+
+	* R/Attributes.R: better handle pre-existing RcppExports.cpp,
+	RcppExports.R when calling compileAttributes()
+
 2018-12-26  Zhuoer Dong  <dongzhuoer@mail.nankai.edu.cn>
 
 	* vignettes/Rcpp-quickref.Rmd: Fix three bugs: use `Named()`, define
